Define publishment as module

--- a/publishment/package.json
+++ b/publishment/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "web-sample",
+  "name": "publishment",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "engines": {
     "node": "11.14.0",
     "npm": "6.7.0"
   },
   "scripts": {
     "clean": "rm -rf dist",
-    "start": "npm run clean && concurrently 'npm run server:dev' 'npm run bundle:scripts:watch'",
-    "build": "npm run clean && concurrently 'tsc -p tsconfig.prod.json' 'NODE_ENV=production npm run bundle:scripts'",
-    "build:scripts": "NODE_PATH=src nodemon -w ./src -e ts,tsx -x ts-node ./src/server/index.ts",
+    "start": "npm run clean && npm run build:scripts && concurrently 'npm run build:scripts:watch' 'npm run bundle:scripts:watch'",
+    "build": "npm run clean && concurrently 'npm run build:scripts' 'NODE_ENV=production npm run bundle:scripts'",
+    "build:scripts": "tsc --declaration -p tsconfig.prod.json",
+    "build:scripts:watch": "tsc --declaration -w -p tsconfig.json",
     "bundle:scripts": "webpack --mode production",
     "bundle:scripts:watch": "webpack -w --mode development",
-    "server": "NODE_PATH=dist node ./dist/server/index.js",
-    "server:dev": "NODE_PATH=src nodemon -w ./src -e ts,tsx -x ts-node ./src/server/index.ts",
     "lint": "eslint '{src/**/,cli/**/,}*.{ts,tsx,js,jsx,json}'",
     "lint:fix": "eslint --fix '{src/**/,cli/**/,}*.{ts,tsx,js,jsx,json}'",
     "check": "npx npm-check-updates"
@@ -28,13 +27,13 @@
     "@types/history": "4.7.2",
     "@types/loadable__component": "5.9.0",
     "@types/node": "12.0.0",
-    "@types/react": "16.8.16",
+    "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
     "@types/react-helmet": "5.0.8",
     "@types/react-intl": "2.3.17",
     "@types/react-redux": "7.0.8",
-    "@types/react-router": "4.4.5",
-    "@types/react-router-dom": "4.3.2",
+    "@types/react-router": "5.0.0",
+    "@types/react-router-dom": "4.3.3",
     "@types/redux": "3.6.0",
     "@types/styled-components": "4.1.14",
     "@typescript-eslint/eslint-plugin": "1.7.0",
@@ -46,13 +45,13 @@
     "eslint-plugin-react": "7.13.0",
     "nodemon": "1.19.0",
     "prettier": "1.17.0",
-    "ts-loader": "5.4.5",
-    "ts-node": "8.1.0",
+    "ts-loader": "6.0.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "typescript": "3.4.5",
     "webpack": "4.30.0",
     "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.3.2"
+    "webpack-cli": "3.3.2",
+    "webpack-manifest-plugin": "2.0.4"
   },
   "dependencies": {
     "@loadable/component": "5.9.0",
