--- a/publishment/package.json
+++ b/publishment/package.json
@@ -26,7 +26,10 @@
     "@types/express": "4.16.1",
     "@types/history": "4.7.2",
     "@types/loadable__component": "5.9.0",
+    "@types/mongoose": "5.5.0",
     "@types/node": "12.0.0",
+    "@types/passport": "1.0.0",
+    "@types/passport-local": "1.0.33",
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
     "@types/react-helmet": "5.0.8",
@@ -57,6 +60,9 @@
     "@loadable/component": "5.9.0",
     "express": "4.16.4",
     "history": "4.9.0",
+    "mongoose": "5.5.7",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "5.2.1",
