--- a/publishment/package.json
+++ b/publishment/package.json
@@ -23,11 +23,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt-nodejs": "0.0.30",
+    "@types/compression": "0.0.36",
     "@types/express": "4.16.1",
+    "@types/express-session": "1.15.12",
+    "@types/express-validator": "3.0.0",
     "@types/history": "4.7.2",
     "@types/loadable__component": "5.9.0",
+    "@types/lusca": "1.5.0",
     "@types/mongoose": "5.5.0",
     "@types/node": "12.0.0",
+    "@types/nodemailer": "4.6.8",
     "@types/passport": "1.0.0",
     "@types/passport-local": "1.0.33",
     "@types/react": "16.8.17",
@@ -58,9 +64,17 @@
   },
   "dependencies": {
     "@loadable/component": "5.9.0",
+    "@types/connect-mongo": "0.0.41",
+    "bcrypt-nodejs": "0.0.3",
+    "compression": "1.7.4",
+    "connect-mongo": "2.0.3",
     "express": "4.16.4",
+    "express-session": "1.16.1",
+    "express-validator": "5.3.1",
     "history": "4.9.0",
+    "lusca": "1.6.1",
     "mongoose": "5.5.7",
+    "nodemailer": "6.1.1",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "react": "16.8.6",
